<resources>
    <string name="app_name">Instagram</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="username_hint">Email or Phone</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
