<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="162dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_facebook_logo"
        app:tint="@color/white"
        android:contentDescription="Facebook logo"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="English . Change"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:padding="16dp"
        android:textColor="@color/white"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:textColorHint="#80FFFFFF"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="#80FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/gray_background_tine"
        android:alpha="0.5"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:onClick="onLogin"
        android:layout_marginTop="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="256dp"
        android:layout_height="179dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_for_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            app:layout_constraintVertical_bias="0.77" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

